<resources>
    <string name="app_name">am-acn4av-Modic</string>
    <string name="titulo_principal">Frases</string>
    <string name="desc_bandera">Imágen bandera de Agentina</string>
    <string name="btn_inicio">Frases</string>
    <string name="marco_fondo">Imagen de Marco de fondo</string>
    <string name="sol_fondo">Sol de fondo</string>
    <string name="frase_del_dia_ejemplo">Frase del día ejemplo akjsdgaklsdbjkalsasdasdasdasdasda</string>
    <string name="btn_configuracion">boton configuración</string>
    <string name="btn_nuevas_frases">boton para agregar nuevas frases</string>
    <string name="sin_frases">Aún no hay frases favoritas</string>
    <string name="img_matecito_nivel_uso">Imágen matecito para nivel de uso</string>
    <string name="hello">hola_mundo</string>
    <string name="btn_favorito">boton para agregar frases a la lista de favoritos</string>
    <string name="ingresoMail">Ingrese su email</string>
    <string name="ingrese_pass">Ingrese su contraseña</string>
    <string name="btn_agregar">boton de agregar frase</string>
    <string name="volver">Volver</string>
    <string name="registrate">Registrate</string>
    <string name="titulo_detalle">Detalle de la frase</string>
    <string name="frase">Frase:</string>
    <string name="texto_frase">Texto de la frase</string>
    <string name="origen">Origen:</string>
    <string name="texto_origen">Texto del origen</string>
    <string name="significado">Significado:</string>
    <string name="texto_significado">Texto del significado</string>
    <string name="ejemplo_de_uso">Ejemplo de uso:</string>
    <string name="texto_ejemplo_de_uso">Texto del ejemplo de uso</string>
    <string name="nivel_de_uso">Nivel de Uso:</string>
    <string name="descripcion_nivel_de_uso">nivel de uso</string>
    <string name="valor_nivel_uso">Valor entre 0 (nada) y 5 (mucho)</string>
    <string name="titulo_agregar">Agregar nueva frase</string>
    <string name="agregar">Agregar</string>
    <string name="fraseFrase">Frase:</string>
    <string name="relleno">...</string>
    <string name="origenFrase">Origen:</string>
    <string name="significadoFrase">Significado:</string>
    <string name="ejemplo_de_uso_frase">Ejemplo de uso:</string>
    <string name="nivel_de_uso_frase">Nivel de uso:</string>
</resources>