<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleActivity"
    android:background="@drawable/background_gradient">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tituloDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_detalle"
                android:textSize="26sp"
                android:textColor="#FF000000"
                android:fontFamily="@font/montserratalternatessemibold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:layout_marginBottom="16dp" />

            <!-- Frase -->
            <TextView
                android:id="@+id/frase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frase"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tituloDetalle"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textoFrase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/texto_frase"
                app:layout_constraintTop_toBottomOf="@id/frase"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="12dp" />

            <!-- Origen -->
            <TextView
                android:id="@+id/origen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origen"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/textoFrase"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textoOrigen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/texto_origen"
                app:layout_constraintTop_toBottomOf="@id/origen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="12dp" />

            <!-- Significado -->
            <TextView
                android:id="@+id/significado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/significado"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/textoOrigen"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textoSignificado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/texto_significado"
                app:layout_constraintTop_toBottomOf="@id/significado"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="12dp" />

            <!-- Ejemplo de uso -->
            <TextView
                android:id="@+id/ejemploUso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ejemplo_de_uso"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/textoSignificado"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textoEjemploUso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/texto_ejemplo_de_uso"
                app:layout_constraintTop_toBottomOf="@id/ejemploUso"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="12dp" />

            <!-- Nivel de uso -->
            <TextView
                android:id="@+id/nivelUso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nivel_de_uso"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/textoEjemploUso"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imagenMatecitos"
                android:layout_width="308dp"
                android:layout_height="45dp"
                android:contentDescription="@string/descripcion_nivel_de_uso"
                app:layout_constraintTop_toBottomOf="@id/nivelUso"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                />

            <Button
                android:id="@+id/btnVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volver"
                app:layout_constraintTop_toBottomOf="@id/imagenMatecitos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>