<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#B3E5FC"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tituloFrases"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/titulo_principal"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/banderaImage"
            android:layout_marginEnd="8dp"
            />

        <ImageView
            android:id="@+id/banderaImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/bandera_argentina"
            android:contentDescription="@string/desc_bandera"
            app:layout_constraintTop_toTopOf="@id/tituloFrases"
            app:layout_constraintBottom_toBottomOf="@id/tituloFrases"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/barraBusqueda"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tituloFrases"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="48dp"
            />

        <ImageButton
            android:id="@+id/configuracion"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/btn_configuracion"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/configuracion"
            app:layout_constraintStart_toEndOf="@+id/barraBusqueda"
            app:layout_constraintBottom_toBottomOf="@id/barraBusqueda"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/botonesLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLayout">

        <ImageButton
            android:id="@+id/btnInicio"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/btn_inicio"
            android:scaleType="fitCenter"
            android:src="@drawable/mate_on" />

        <ImageButton
            android:id="@+id/btnFavoritos"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/btn_inicio"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/corazon_off" />

        <ImageButton
            android:id="@+id/btnFraseDia"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/btn_inicio"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/pregunta" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/botonesLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageButton
            android:id="@+id/btnAgregar"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/btn_nuevas_frases"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_agregar"
            app:layout_constraintBottom_toBottomOf="@+id/scrollFrases"
            app:layout_constraintEnd_toEndOf="@+id/scrollFrases"
            app:layout_constraintStart_toEndOf="@+id/solPatrio" />

        <ImageView
            android:id="@+id/fondoMarco"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/fondo_marco"
            android:alpha="0.2"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/marco_fondo"/>

        <ImageView
            android:id="@+id/solPatrio"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/sol_de_mayo"
            android:scaleType="fitCenter"
            android:alpha="0.3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/sol_fondo"/>

        <!-- Sección: Lista de frases -->
        <ScrollView
            android:id="@+id/scrollFrases"
            android:layout_width="0dp"
            android:layout_height="420dp"
            android:fillViewport="true"
            android:paddingStart="55dp"
            android:paddingEnd="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/frasesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>

        <!-- Sección: Favoritos -->
        <ScrollView
            android:id="@+id/scrollFavoritos"
            android:layout_width="0dp"
            android:layout_height="420dp"
            android:fillViewport="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <LinearLayout
                android:id="@+id/frasesFavoritas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>

        <!-- Sección: Frase del día -->
        <LinearLayout
            android:id="@+id/fraseDelDia"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ScrollView
                android:id="@+id/scrollFraseDelDia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:paddingStart="55dp"
                android:paddingEnd="40dp">

                <TextView
                    android:id="@+id/fraseDelDiaText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="115dp"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    />
            </ScrollView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>